# Python-Firebase-Authentication-FastAPI

./: .dockerignore  .env.test  .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  README.rst  google_application_credentials.json  logging_config.json  main.py  pyproject.toml  serve_uvicorn.py
python_fastapi_firebase_authentication/: main.py
python_fastapi_firebase_authentication/core/: configEnv.py  custom_logging.py  env.py  settings.py
python_fastapi_firebase_authentication/core/data/mongodb/: db.py
python_fastapi_firebase_authentication/modules/dummy/: endpoints.py  model.py
python_fastapi_firebase_authentication/modules/user/: constants.py
python_fastapi_firebase_authentication/modules/user/controller/: authVerify.py  banker.py  player.py
python_fastapi_firebase_authentication/modules/user/data/mongoDb/: dbConstants.py
python_fastapi_firebase_authentication/modules/user/data/mongoDb/interface/: authProvider.py  banker.py  player.py  user.py
python_fastapi_firebase_authentication/modules/user/data/mongoDb/models/: authProvider.py  banker.py  player.py  user.py
python_fastapi_firebase_authentication/modules/user/model/: authorisedUser.py  banker.py  model.py
python_fastapi_firebase_authentication/modules/user/route/: endpoints.py
python_fastapi_firebase_authentication/utils/: bitwise.py  dependencies.py
tests/: test_python_fastapi_firebase_authentication.py
