[tool.poetry]
name = "python_fastapi_firebase_authentication"
version = "0.1.0"
description = ""
authors = ["Rahul<rahulprakash11@gmail.com>"]

[tool.poetry.scripts]
cli_script = "packagename.cli:main"
dev = "python_fastapi_firebase_authentication.core.configEnv:dev"
prod = "python_fastapi_firebase_authentication.core.configEnv:prod"
test = "python_fastapi_firebase_authentication.core.configEnv:test"
server = "serve_uvicorn:uvi_server"


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
loguru = "^0.6.0"
firebase-admin = "^5.3.0"
email-validator = "^1.2.1"
beanie = "^1.11.9"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
